[gd_scene load_steps=2 format=3 uid="uid://bnjx1oe4s3asw"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_ex8an"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ex8an")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "20 Games Challenge
1Â° Game - Pong
By SynchNone"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 20
theme_override_constants/margin_bottom = 20

[node name="1Player" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "1 Player"

[node name="2Players" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "2 Players"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="button_down" from="VBoxContainer/1Player" to="." method="_on_player_button_down"]
[connection signal="button_down" from="VBoxContainer/2Players" to="." method="_on_players_button_down"]
[connection signal="button_down" from="VBoxContainer/Quit" to="." method="_on_quit_button_down"]
